hphp/hack/test/typecheck/magic_methods/magic_get.php
<?hh

class C {
  public function __get():void {}
}
